@@ -1,4 +1,5 @@
 Version 0.5
+ - jmdlx: Added flipbook export
  - Makefile: added jmlib target
  - aajm: Random patterns
  - aajm: Added a README on how to use
